xopgi/ql/lang/expressions/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> st_expr
Rule 1     st_expr -> expr
Rule 2     expr -> literal
Rule 3     expr -> identifier
Rule 4     expr -> enclosed_expr
Rule 5     expr -> letexpr
Rule 6     expr -> where_expr
Rule 7     expr -> unit_value
Rule 8     literal -> number
Rule 9     literal -> concrete_number
Rule 10    literal -> string
Rule 11    literal -> char
Rule 12    literal -> date
Rule 13    literal -> datetime
Rule 14    literal -> date_interval
Rule 15    literal -> datetime_interval
Rule 16    date -> DATE
Rule 17    datetime -> DATETIME
Rule 18    date_interval -> DATE_INTERVAL
Rule 19    datetime_interval -> DATETIME_INTERVAL
Rule 20    unit_value -> LPAREN RPAREN
Rule 21    char -> CHAR
Rule 22    string -> STRING
Rule 23    identifier -> IDENTIFIER
Rule 24    enclosed_expr -> LPAREN expr RPAREN
Rule 25    expr -> expr TICK_OPERATOR expr
Rule 26    expr -> expr SPACE expr
Rule 27    expr -> enclosed_expr expr
Rule 28    expr -> expr enclosed_expr
Rule 29    expr -> expr DOT_OPERATOR expr
Rule 30    enclosed_expr -> LPAREN DOT_OPERATOR RPAREN
Rule 31    enclosed_expr -> LPAREN operator RPAREN
Rule 32    expr -> expr operator expr
Rule 33    operator -> PLUS
Rule 34    operator -> MINUS
Rule 35    operator -> STAR
Rule 36    operator -> SLASH
Rule 37    operator -> DOUBLESLASH
Rule 38    operator -> PERCENT
Rule 39    operator -> ARROW
Rule 40    operator -> OPERATOR
Rule 41    number -> BASE10_INTEGER
Rule 42    number -> BASE16_INTEGER
Rule 43    number -> BASE8_INTEGER
Rule 44    number -> BASE2_INTEGER
Rule 45    number -> PLUS number
Rule 46    number -> MINUS number
Rule 47    number -> FLOAT
Rule 48    concrete_number -> number ANNOTATION string
Rule 49    concrete_number -> number ANNOTATION char
Rule 50    concrete_number -> number ANNOTATION identifier
Rule 51    empty -> <empty>
Rule 52    expr -> BACKSLASH parameters ARROW expr
Rule 53    parameters -> IDENTIFIER _parameters
Rule 54    _parameters -> SPACE IDENTIFIER _parameters
Rule 55    _parameters -> empty
Rule 56    pattern -> parameters
Rule 57    equation -> pattern EQ expr
Rule 58    equations -> equation _equation_set
Rule 59    _equation_set -> PADDING equation _equation_set
Rule 60    _equation_set -> empty
Rule 61    letexpr -> KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
Rule 62    where_expr -> expr KEYWORD_WHERE SPACE equations
Rule 63    where_expr -> expr KEYWORD_WHERE PADDING equations

Terminals, with rules where they appear

ANNOTATION           : 48 49 50
ARROW                : 39 52
BACKSLASH            : 52
BASE10_INTEGER       : 41
BASE16_INTEGER       : 42
BASE2_INTEGER        : 44
BASE8_INTEGER        : 43
CHAR                 : 21
COLON                : 
DATE                 : 16
DATETIME             : 17
DATETIME_INTERVAL    : 19
DATE_INTERVAL        : 18
DOT_OPERATOR         : 29 30
DOUBLESLASH          : 37
EQ                   : 57
FLOAT                : 47
IDENTIFIER           : 23 53 54
KEYWORD_IN           : 61
KEYWORD_LET          : 61
KEYWORD_WHERE        : 62 63
LPAREN               : 20 24 30 31
MINUS                : 34 46
OPERATOR             : 40
PADDING              : 59 63
PERCENT              : 38
PLUS                 : 33 45
RPAREN               : 20 24 30 31
SLASH                : 36
SPACE                : 26 54 61 61 62
STAR                 : 35
STRING               : 22
TICK_OPERATOR        : 25
error                : 

Nonterminals, with rules where they appear

_equation_set        : 58 59
_parameters          : 53 54
char                 : 11 49
concrete_number      : 9
date                 : 12
date_interval        : 14
datetime             : 13
datetime_interval    : 15
empty                : 55 60
enclosed_expr        : 4 27 28
equation             : 58 59
equations            : 61 62 63
expr                 : 1 24 25 25 26 26 27 28 29 29 32 32 52 57 62 63
identifier           : 3 50
letexpr              : 5
literal              : 2
number               : 8 45 46 48 49 50
operator             : 31 32
parameters           : 52 56
pattern              : 57
st_expr              : 61 0
string               : 10 48
unit_value           : 7
where_expr           : 6

Parsing method: LALR

state 0

    (0) S' -> . st_expr
    (1) st_expr -> . expr
    (2) expr -> . literal
    (3) expr -> . identifier
    (4) expr -> . enclosed_expr
    (5) expr -> . letexpr
    (6) expr -> . where_expr
    (7) expr -> . unit_value
    (25) expr -> . expr TICK_OPERATOR expr
    (26) expr -> . expr SPACE expr
    (27) expr -> . enclosed_expr expr
    (28) expr -> . expr enclosed_expr
    (29) expr -> . expr DOT_OPERATOR expr
    (32) expr -> . expr operator expr
    (52) expr -> . BACKSLASH parameters ARROW expr
    (8) literal -> . number
    (9) literal -> . concrete_number
    (10) literal -> . string
    (11) literal -> . char
    (12) literal -> . date
    (13) literal -> . datetime
    (14) literal -> . date_interval
    (15) literal -> . datetime_interval
    (23) identifier -> . IDENTIFIER
    (24) enclosed_expr -> . LPAREN expr RPAREN
    (30) enclosed_expr -> . LPAREN DOT_OPERATOR RPAREN
    (31) enclosed_expr -> . LPAREN operator RPAREN
    (61) letexpr -> . KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
    (62) where_expr -> . expr KEYWORD_WHERE SPACE equations
    (63) where_expr -> . expr KEYWORD_WHERE PADDING equations
    (20) unit_value -> . LPAREN RPAREN
    (41) number -> . BASE10_INTEGER
    (42) number -> . BASE16_INTEGER
    (43) number -> . BASE8_INTEGER
    (44) number -> . BASE2_INTEGER
    (45) number -> . PLUS number
    (46) number -> . MINUS number
    (47) number -> . FLOAT
    (48) concrete_number -> . number ANNOTATION string
    (49) concrete_number -> . number ANNOTATION char
    (50) concrete_number -> . number ANNOTATION identifier
    (22) string -> . STRING
    (21) char -> . CHAR
    (16) date -> . DATE
    (17) datetime -> . DATETIME
    (18) date_interval -> . DATE_INTERVAL
    (19) datetime_interval -> . DATETIME_INTERVAL

    BACKSLASH       shift and go to state 9
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    KEYWORD_LET     shift and go to state 20
    BASE10_INTEGER  shift and go to state 21
    BASE16_INTEGER  shift and go to state 22
    BASE8_INTEGER   shift and go to state 23
    BASE2_INTEGER   shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    CHAR            shift and go to state 29
    DATE            shift and go to state 30
    DATETIME        shift and go to state 31
    DATE_INTERVAL   shift and go to state 32
    DATETIME_INTERVAL shift and go to state 33

    st_expr                        shift and go to state 1
    expr                           shift and go to state 2
    literal                        shift and go to state 3
    identifier                     shift and go to state 4
    enclosed_expr                  shift and go to state 5
    letexpr                        shift and go to state 6
    where_expr                     shift and go to state 7
    unit_value                     shift and go to state 8
    number                         shift and go to state 10
    concrete_number                shift and go to state 11
    string                         shift and go to state 12
    char                           shift and go to state 13
    date                           shift and go to state 14
    datetime                       shift and go to state 15
    date_interval                  shift and go to state 16
    datetime_interval              shift and go to state 17

state 1

    (0) S' -> st_expr .



state 2

    (1) st_expr -> expr .
    (25) expr -> expr . TICK_OPERATOR expr
    (26) expr -> expr . SPACE expr
    (28) expr -> expr . enclosed_expr
    (29) expr -> expr . DOT_OPERATOR expr
    (32) expr -> expr . operator expr
    (62) where_expr -> expr . KEYWORD_WHERE SPACE equations
    (63) where_expr -> expr . KEYWORD_WHERE PADDING equations
    (24) enclosed_expr -> . LPAREN expr RPAREN
    (30) enclosed_expr -> . LPAREN DOT_OPERATOR RPAREN
    (31) enclosed_expr -> . LPAREN operator RPAREN
    (33) operator -> . PLUS
    (34) operator -> . MINUS
    (35) operator -> . STAR
    (36) operator -> . SLASH
    (37) operator -> . DOUBLESLASH
    (38) operator -> . PERCENT
    (39) operator -> . ARROW
    (40) operator -> . OPERATOR

  ! shift/reduce conflict for TICK_OPERATOR resolved as shift
  ! shift/reduce conflict for SPACE resolved as shift
  ! shift/reduce conflict for DOT_OPERATOR resolved as shift
  ! shift/reduce conflict for KEYWORD_WHERE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for STAR resolved as shift
  ! shift/reduce conflict for SLASH resolved as shift
  ! shift/reduce conflict for DOUBLESLASH resolved as shift
  ! shift/reduce conflict for PERCENT resolved as shift
  ! shift/reduce conflict for ARROW resolved as shift
  ! shift/reduce conflict for OPERATOR resolved as shift
    $end            reduce using rule 1 (st_expr -> expr .)
    RPAREN          reduce using rule 1 (st_expr -> expr .)
    PADDING         reduce using rule 1 (st_expr -> expr .)
    KEYWORD_IN      reduce using rule 1 (st_expr -> expr .)
    TICK_OPERATOR   shift and go to state 34
    SPACE           shift and go to state 35
    DOT_OPERATOR    shift and go to state 37
    KEYWORD_WHERE   shift and go to state 39
    LPAREN          shift and go to state 40
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    STAR            shift and go to state 43
    SLASH           shift and go to state 44
    DOUBLESLASH     shift and go to state 45
    PERCENT         shift and go to state 46
    ARROW           shift and go to state 47
    OPERATOR        shift and go to state 48

  ! TICK_OPERATOR   [ reduce using rule 1 (st_expr -> expr .) ]
  ! SPACE           [ reduce using rule 1 (st_expr -> expr .) ]
  ! DOT_OPERATOR    [ reduce using rule 1 (st_expr -> expr .) ]
  ! KEYWORD_WHERE   [ reduce using rule 1 (st_expr -> expr .) ]
  ! LPAREN          [ reduce using rule 1 (st_expr -> expr .) ]
  ! PLUS            [ reduce using rule 1 (st_expr -> expr .) ]
  ! MINUS           [ reduce using rule 1 (st_expr -> expr .) ]
  ! STAR            [ reduce using rule 1 (st_expr -> expr .) ]
  ! SLASH           [ reduce using rule 1 (st_expr -> expr .) ]
  ! DOUBLESLASH     [ reduce using rule 1 (st_expr -> expr .) ]
  ! PERCENT         [ reduce using rule 1 (st_expr -> expr .) ]
  ! ARROW           [ reduce using rule 1 (st_expr -> expr .) ]
  ! OPERATOR        [ reduce using rule 1 (st_expr -> expr .) ]

    enclosed_expr                  shift and go to state 36
    operator                       shift and go to state 38

state 3

    (2) expr -> literal .

    TICK_OPERATOR   reduce using rule 2 (expr -> literal .)
    SPACE           reduce using rule 2 (expr -> literal .)
    DOT_OPERATOR    reduce using rule 2 (expr -> literal .)
    KEYWORD_WHERE   reduce using rule 2 (expr -> literal .)
    LPAREN          reduce using rule 2 (expr -> literal .)
    PLUS            reduce using rule 2 (expr -> literal .)
    MINUS           reduce using rule 2 (expr -> literal .)
    STAR            reduce using rule 2 (expr -> literal .)
    SLASH           reduce using rule 2 (expr -> literal .)
    DOUBLESLASH     reduce using rule 2 (expr -> literal .)
    PERCENT         reduce using rule 2 (expr -> literal .)
    ARROW           reduce using rule 2 (expr -> literal .)
    OPERATOR        reduce using rule 2 (expr -> literal .)
    $end            reduce using rule 2 (expr -> literal .)
    RPAREN          reduce using rule 2 (expr -> literal .)
    PADDING         reduce using rule 2 (expr -> literal .)
    KEYWORD_IN      reduce using rule 2 (expr -> literal .)


state 4

    (3) expr -> identifier .

    TICK_OPERATOR   reduce using rule 3 (expr -> identifier .)
    SPACE           reduce using rule 3 (expr -> identifier .)
    DOT_OPERATOR    reduce using rule 3 (expr -> identifier .)
    KEYWORD_WHERE   reduce using rule 3 (expr -> identifier .)
    LPAREN          reduce using rule 3 (expr -> identifier .)
    PLUS            reduce using rule 3 (expr -> identifier .)
    MINUS           reduce using rule 3 (expr -> identifier .)
    STAR            reduce using rule 3 (expr -> identifier .)
    SLASH           reduce using rule 3 (expr -> identifier .)
    DOUBLESLASH     reduce using rule 3 (expr -> identifier .)
    PERCENT         reduce using rule 3 (expr -> identifier .)
    ARROW           reduce using rule 3 (expr -> identifier .)
    OPERATOR        reduce using rule 3 (expr -> identifier .)
    $end            reduce using rule 3 (expr -> identifier .)
    RPAREN          reduce using rule 3 (expr -> identifier .)
    PADDING         reduce using rule 3 (expr -> identifier .)
    KEYWORD_IN      reduce using rule 3 (expr -> identifier .)


state 5

    (4) expr -> enclosed_expr .
    (27) expr -> enclosed_expr . expr
    (2) expr -> . literal
    (3) expr -> . identifier
    (4) expr -> . enclosed_expr
    (5) expr -> . letexpr
    (6) expr -> . where_expr
    (7) expr -> . unit_value
    (25) expr -> . expr TICK_OPERATOR expr
    (26) expr -> . expr SPACE expr
    (27) expr -> . enclosed_expr expr
    (28) expr -> . expr enclosed_expr
    (29) expr -> . expr DOT_OPERATOR expr
    (32) expr -> . expr operator expr
    (52) expr -> . BACKSLASH parameters ARROW expr
    (8) literal -> . number
    (9) literal -> . concrete_number
    (10) literal -> . string
    (11) literal -> . char
    (12) literal -> . date
    (13) literal -> . datetime
    (14) literal -> . date_interval
    (15) literal -> . datetime_interval
    (23) identifier -> . IDENTIFIER
    (24) enclosed_expr -> . LPAREN expr RPAREN
    (30) enclosed_expr -> . LPAREN DOT_OPERATOR RPAREN
    (31) enclosed_expr -> . LPAREN operator RPAREN
    (61) letexpr -> . KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
    (62) where_expr -> . expr KEYWORD_WHERE SPACE equations
    (63) where_expr -> . expr KEYWORD_WHERE PADDING equations
    (20) unit_value -> . LPAREN RPAREN
    (41) number -> . BASE10_INTEGER
    (42) number -> . BASE16_INTEGER
    (43) number -> . BASE8_INTEGER
    (44) number -> . BASE2_INTEGER
    (45) number -> . PLUS number
    (46) number -> . MINUS number
    (47) number -> . FLOAT
    (48) concrete_number -> . number ANNOTATION string
    (49) concrete_number -> . number ANNOTATION char
    (50) concrete_number -> . number ANNOTATION identifier
    (22) string -> . STRING
    (21) char -> . CHAR
    (16) date -> . DATE
    (17) datetime -> . DATETIME
    (18) date_interval -> . DATE_INTERVAL
    (19) datetime_interval -> . DATETIME_INTERVAL

  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    TICK_OPERATOR   reduce using rule 4 (expr -> enclosed_expr .)
    SPACE           reduce using rule 4 (expr -> enclosed_expr .)
    DOT_OPERATOR    reduce using rule 4 (expr -> enclosed_expr .)
    KEYWORD_WHERE   reduce using rule 4 (expr -> enclosed_expr .)
    STAR            reduce using rule 4 (expr -> enclosed_expr .)
    SLASH           reduce using rule 4 (expr -> enclosed_expr .)
    DOUBLESLASH     reduce using rule 4 (expr -> enclosed_expr .)
    PERCENT         reduce using rule 4 (expr -> enclosed_expr .)
    ARROW           reduce using rule 4 (expr -> enclosed_expr .)
    OPERATOR        reduce using rule 4 (expr -> enclosed_expr .)
    $end            reduce using rule 4 (expr -> enclosed_expr .)
    RPAREN          reduce using rule 4 (expr -> enclosed_expr .)
    PADDING         reduce using rule 4 (expr -> enclosed_expr .)
    KEYWORD_IN      reduce using rule 4 (expr -> enclosed_expr .)
    BACKSLASH       shift and go to state 9
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    KEYWORD_LET     shift and go to state 20
    BASE10_INTEGER  shift and go to state 21
    BASE16_INTEGER  shift and go to state 22
    BASE8_INTEGER   shift and go to state 23
    BASE2_INTEGER   shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    CHAR            shift and go to state 29
    DATE            shift and go to state 30
    DATETIME        shift and go to state 31
    DATE_INTERVAL   shift and go to state 32
    DATETIME_INTERVAL shift and go to state 33

  ! LPAREN          [ reduce using rule 4 (expr -> enclosed_expr .) ]
  ! PLUS            [ reduce using rule 4 (expr -> enclosed_expr .) ]
  ! MINUS           [ reduce using rule 4 (expr -> enclosed_expr .) ]

    enclosed_expr                  shift and go to state 5
    expr                           shift and go to state 49
    literal                        shift and go to state 3
    identifier                     shift and go to state 4
    letexpr                        shift and go to state 6
    where_expr                     shift and go to state 7
    unit_value                     shift and go to state 8
    number                         shift and go to state 10
    concrete_number                shift and go to state 11
    string                         shift and go to state 12
    char                           shift and go to state 13
    date                           shift and go to state 14
    datetime                       shift and go to state 15
    date_interval                  shift and go to state 16
    datetime_interval              shift and go to state 17

state 6

    (5) expr -> letexpr .

    TICK_OPERATOR   reduce using rule 5 (expr -> letexpr .)
    SPACE           reduce using rule 5 (expr -> letexpr .)
    DOT_OPERATOR    reduce using rule 5 (expr -> letexpr .)
    KEYWORD_WHERE   reduce using rule 5 (expr -> letexpr .)
    LPAREN          reduce using rule 5 (expr -> letexpr .)
    PLUS            reduce using rule 5 (expr -> letexpr .)
    MINUS           reduce using rule 5 (expr -> letexpr .)
    STAR            reduce using rule 5 (expr -> letexpr .)
    SLASH           reduce using rule 5 (expr -> letexpr .)
    DOUBLESLASH     reduce using rule 5 (expr -> letexpr .)
    PERCENT         reduce using rule 5 (expr -> letexpr .)
    ARROW           reduce using rule 5 (expr -> letexpr .)
    OPERATOR        reduce using rule 5 (expr -> letexpr .)
    $end            reduce using rule 5 (expr -> letexpr .)
    RPAREN          reduce using rule 5 (expr -> letexpr .)
    PADDING         reduce using rule 5 (expr -> letexpr .)
    KEYWORD_IN      reduce using rule 5 (expr -> letexpr .)


state 7

    (6) expr -> where_expr .

    TICK_OPERATOR   reduce using rule 6 (expr -> where_expr .)
    SPACE           reduce using rule 6 (expr -> where_expr .)
    DOT_OPERATOR    reduce using rule 6 (expr -> where_expr .)
    KEYWORD_WHERE   reduce using rule 6 (expr -> where_expr .)
    LPAREN          reduce using rule 6 (expr -> where_expr .)
    PLUS            reduce using rule 6 (expr -> where_expr .)
    MINUS           reduce using rule 6 (expr -> where_expr .)
    STAR            reduce using rule 6 (expr -> where_expr .)
    SLASH           reduce using rule 6 (expr -> where_expr .)
    DOUBLESLASH     reduce using rule 6 (expr -> where_expr .)
    PERCENT         reduce using rule 6 (expr -> where_expr .)
    ARROW           reduce using rule 6 (expr -> where_expr .)
    OPERATOR        reduce using rule 6 (expr -> where_expr .)
    $end            reduce using rule 6 (expr -> where_expr .)
    RPAREN          reduce using rule 6 (expr -> where_expr .)
    PADDING         reduce using rule 6 (expr -> where_expr .)
    KEYWORD_IN      reduce using rule 6 (expr -> where_expr .)


state 8

    (7) expr -> unit_value .

    TICK_OPERATOR   reduce using rule 7 (expr -> unit_value .)
    SPACE           reduce using rule 7 (expr -> unit_value .)
    DOT_OPERATOR    reduce using rule 7 (expr -> unit_value .)
    KEYWORD_WHERE   reduce using rule 7 (expr -> unit_value .)
    LPAREN          reduce using rule 7 (expr -> unit_value .)
    PLUS            reduce using rule 7 (expr -> unit_value .)
    MINUS           reduce using rule 7 (expr -> unit_value .)
    STAR            reduce using rule 7 (expr -> unit_value .)
    SLASH           reduce using rule 7 (expr -> unit_value .)
    DOUBLESLASH     reduce using rule 7 (expr -> unit_value .)
    PERCENT         reduce using rule 7 (expr -> unit_value .)
    ARROW           reduce using rule 7 (expr -> unit_value .)
    OPERATOR        reduce using rule 7 (expr -> unit_value .)
    $end            reduce using rule 7 (expr -> unit_value .)
    RPAREN          reduce using rule 7 (expr -> unit_value .)
    PADDING         reduce using rule 7 (expr -> unit_value .)
    KEYWORD_IN      reduce using rule 7 (expr -> unit_value .)


state 9

    (52) expr -> BACKSLASH . parameters ARROW expr
    (53) parameters -> . IDENTIFIER _parameters

    IDENTIFIER      shift and go to state 51

    parameters                     shift and go to state 50

state 10

    (8) literal -> number .
    (48) concrete_number -> number . ANNOTATION string
    (49) concrete_number -> number . ANNOTATION char
    (50) concrete_number -> number . ANNOTATION identifier

    TICK_OPERATOR   reduce using rule 8 (literal -> number .)
    SPACE           reduce using rule 8 (literal -> number .)
    DOT_OPERATOR    reduce using rule 8 (literal -> number .)
    KEYWORD_WHERE   reduce using rule 8 (literal -> number .)
    LPAREN          reduce using rule 8 (literal -> number .)
    PLUS            reduce using rule 8 (literal -> number .)
    MINUS           reduce using rule 8 (literal -> number .)
    STAR            reduce using rule 8 (literal -> number .)
    SLASH           reduce using rule 8 (literal -> number .)
    DOUBLESLASH     reduce using rule 8 (literal -> number .)
    PERCENT         reduce using rule 8 (literal -> number .)
    ARROW           reduce using rule 8 (literal -> number .)
    OPERATOR        reduce using rule 8 (literal -> number .)
    $end            reduce using rule 8 (literal -> number .)
    RPAREN          reduce using rule 8 (literal -> number .)
    PADDING         reduce using rule 8 (literal -> number .)
    KEYWORD_IN      reduce using rule 8 (literal -> number .)
    ANNOTATION      shift and go to state 52


state 11

    (9) literal -> concrete_number .

    TICK_OPERATOR   reduce using rule 9 (literal -> concrete_number .)
    SPACE           reduce using rule 9 (literal -> concrete_number .)
    DOT_OPERATOR    reduce using rule 9 (literal -> concrete_number .)
    KEYWORD_WHERE   reduce using rule 9 (literal -> concrete_number .)
    LPAREN          reduce using rule 9 (literal -> concrete_number .)
    PLUS            reduce using rule 9 (literal -> concrete_number .)
    MINUS           reduce using rule 9 (literal -> concrete_number .)
    STAR            reduce using rule 9 (literal -> concrete_number .)
    SLASH           reduce using rule 9 (literal -> concrete_number .)
    DOUBLESLASH     reduce using rule 9 (literal -> concrete_number .)
    PERCENT         reduce using rule 9 (literal -> concrete_number .)
    ARROW           reduce using rule 9 (literal -> concrete_number .)
    OPERATOR        reduce using rule 9 (literal -> concrete_number .)
    $end            reduce using rule 9 (literal -> concrete_number .)
    RPAREN          reduce using rule 9 (literal -> concrete_number .)
    PADDING         reduce using rule 9 (literal -> concrete_number .)
    KEYWORD_IN      reduce using rule 9 (literal -> concrete_number .)


state 12

    (10) literal -> string .

    TICK_OPERATOR   reduce using rule 10 (literal -> string .)
    SPACE           reduce using rule 10 (literal -> string .)
    DOT_OPERATOR    reduce using rule 10 (literal -> string .)
    KEYWORD_WHERE   reduce using rule 10 (literal -> string .)
    LPAREN          reduce using rule 10 (literal -> string .)
    PLUS            reduce using rule 10 (literal -> string .)
    MINUS           reduce using rule 10 (literal -> string .)
    STAR            reduce using rule 10 (literal -> string .)
    SLASH           reduce using rule 10 (literal -> string .)
    DOUBLESLASH     reduce using rule 10 (literal -> string .)
    PERCENT         reduce using rule 10 (literal -> string .)
    ARROW           reduce using rule 10 (literal -> string .)
    OPERATOR        reduce using rule 10 (literal -> string .)
    $end            reduce using rule 10 (literal -> string .)
    RPAREN          reduce using rule 10 (literal -> string .)
    PADDING         reduce using rule 10 (literal -> string .)
    KEYWORD_IN      reduce using rule 10 (literal -> string .)


state 13

    (11) literal -> char .

    TICK_OPERATOR   reduce using rule 11 (literal -> char .)
    SPACE           reduce using rule 11 (literal -> char .)
    DOT_OPERATOR    reduce using rule 11 (literal -> char .)
    KEYWORD_WHERE   reduce using rule 11 (literal -> char .)
    LPAREN          reduce using rule 11 (literal -> char .)
    PLUS            reduce using rule 11 (literal -> char .)
    MINUS           reduce using rule 11 (literal -> char .)
    STAR            reduce using rule 11 (literal -> char .)
    SLASH           reduce using rule 11 (literal -> char .)
    DOUBLESLASH     reduce using rule 11 (literal -> char .)
    PERCENT         reduce using rule 11 (literal -> char .)
    ARROW           reduce using rule 11 (literal -> char .)
    OPERATOR        reduce using rule 11 (literal -> char .)
    $end            reduce using rule 11 (literal -> char .)
    RPAREN          reduce using rule 11 (literal -> char .)
    PADDING         reduce using rule 11 (literal -> char .)
    KEYWORD_IN      reduce using rule 11 (literal -> char .)


state 14

    (12) literal -> date .

    TICK_OPERATOR   reduce using rule 12 (literal -> date .)
    SPACE           reduce using rule 12 (literal -> date .)
    DOT_OPERATOR    reduce using rule 12 (literal -> date .)
    KEYWORD_WHERE   reduce using rule 12 (literal -> date .)
    LPAREN          reduce using rule 12 (literal -> date .)
    PLUS            reduce using rule 12 (literal -> date .)
    MINUS           reduce using rule 12 (literal -> date .)
    STAR            reduce using rule 12 (literal -> date .)
    SLASH           reduce using rule 12 (literal -> date .)
    DOUBLESLASH     reduce using rule 12 (literal -> date .)
    PERCENT         reduce using rule 12 (literal -> date .)
    ARROW           reduce using rule 12 (literal -> date .)
    OPERATOR        reduce using rule 12 (literal -> date .)
    $end            reduce using rule 12 (literal -> date .)
    RPAREN          reduce using rule 12 (literal -> date .)
    PADDING         reduce using rule 12 (literal -> date .)
    KEYWORD_IN      reduce using rule 12 (literal -> date .)


state 15

    (13) literal -> datetime .

    TICK_OPERATOR   reduce using rule 13 (literal -> datetime .)
    SPACE           reduce using rule 13 (literal -> datetime .)
    DOT_OPERATOR    reduce using rule 13 (literal -> datetime .)
    KEYWORD_WHERE   reduce using rule 13 (literal -> datetime .)
    LPAREN          reduce using rule 13 (literal -> datetime .)
    PLUS            reduce using rule 13 (literal -> datetime .)
    MINUS           reduce using rule 13 (literal -> datetime .)
    STAR            reduce using rule 13 (literal -> datetime .)
    SLASH           reduce using rule 13 (literal -> datetime .)
    DOUBLESLASH     reduce using rule 13 (literal -> datetime .)
    PERCENT         reduce using rule 13 (literal -> datetime .)
    ARROW           reduce using rule 13 (literal -> datetime .)
    OPERATOR        reduce using rule 13 (literal -> datetime .)
    $end            reduce using rule 13 (literal -> datetime .)
    RPAREN          reduce using rule 13 (literal -> datetime .)
    PADDING         reduce using rule 13 (literal -> datetime .)
    KEYWORD_IN      reduce using rule 13 (literal -> datetime .)


state 16

    (14) literal -> date_interval .

    TICK_OPERATOR   reduce using rule 14 (literal -> date_interval .)
    SPACE           reduce using rule 14 (literal -> date_interval .)
    DOT_OPERATOR    reduce using rule 14 (literal -> date_interval .)
    KEYWORD_WHERE   reduce using rule 14 (literal -> date_interval .)
    LPAREN          reduce using rule 14 (literal -> date_interval .)
    PLUS            reduce using rule 14 (literal -> date_interval .)
    MINUS           reduce using rule 14 (literal -> date_interval .)
    STAR            reduce using rule 14 (literal -> date_interval .)
    SLASH           reduce using rule 14 (literal -> date_interval .)
    DOUBLESLASH     reduce using rule 14 (literal -> date_interval .)
    PERCENT         reduce using rule 14 (literal -> date_interval .)
    ARROW           reduce using rule 14 (literal -> date_interval .)
    OPERATOR        reduce using rule 14 (literal -> date_interval .)
    $end            reduce using rule 14 (literal -> date_interval .)
    RPAREN          reduce using rule 14 (literal -> date_interval .)
    PADDING         reduce using rule 14 (literal -> date_interval .)
    KEYWORD_IN      reduce using rule 14 (literal -> date_interval .)


state 17

    (15) literal -> datetime_interval .

    TICK_OPERATOR   reduce using rule 15 (literal -> datetime_interval .)
    SPACE           reduce using rule 15 (literal -> datetime_interval .)
    DOT_OPERATOR    reduce using rule 15 (literal -> datetime_interval .)
    KEYWORD_WHERE   reduce using rule 15 (literal -> datetime_interval .)
    LPAREN          reduce using rule 15 (literal -> datetime_interval .)
    PLUS            reduce using rule 15 (literal -> datetime_interval .)
    MINUS           reduce using rule 15 (literal -> datetime_interval .)
    STAR            reduce using rule 15 (literal -> datetime_interval .)
    SLASH           reduce using rule 15 (literal -> datetime_interval .)
    DOUBLESLASH     reduce using rule 15 (literal -> datetime_interval .)
    PERCENT         reduce using rule 15 (literal -> datetime_interval .)
    ARROW           reduce using rule 15 (literal -> datetime_interval .)
    OPERATOR        reduce using rule 15 (literal -> datetime_interval .)
    $end            reduce using rule 15 (literal -> datetime_interval .)
    RPAREN          reduce using rule 15 (literal -> datetime_interval .)
    PADDING         reduce using rule 15 (literal -> datetime_interval .)
    KEYWORD_IN      reduce using rule 15 (literal -> datetime_interval .)


state 18

    (23) identifier -> IDENTIFIER .

    TICK_OPERATOR   reduce using rule 23 (identifier -> IDENTIFIER .)
    SPACE           reduce using rule 23 (identifier -> IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 23 (identifier -> IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 23 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 23 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 23 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 23 (identifier -> IDENTIFIER .)
    STAR            reduce using rule 23 (identifier -> IDENTIFIER .)
    SLASH           reduce using rule 23 (identifier -> IDENTIFIER .)
    DOUBLESLASH     reduce using rule 23 (identifier -> IDENTIFIER .)
    PERCENT         reduce using rule 23 (identifier -> IDENTIFIER .)
    ARROW           reduce using rule 23 (identifier -> IDENTIFIER .)
    OPERATOR        reduce using rule 23 (identifier -> IDENTIFIER .)
    $end            reduce using rule 23 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 23 (identifier -> IDENTIFIER .)
    PADDING         reduce using rule 23 (identifier -> IDENTIFIER .)
    KEYWORD_IN      reduce using rule 23 (identifier -> IDENTIFIER .)


state 19
